data/derived/sp14/progs/unify/prog1343.ml.out
Characters 388-390:
  eval (e1,x,y) *. -1;;
                   ^^
Error: This expression has type int but an expression was expected of type
         float
